--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 title: Demo_v1 # the website title (if blank, full name will be used instead)
 first_name: Tianyu
-middle_name: a
+middle_name: 
 last_name: Qi
 email: you@example.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
